--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -21,6 +21,10 @@ $btn-icon-font-size: 18px;
     font-family: Rubik;
     src: url('~/assets/fonts/Rubik.ttf');
 }
+@font-face {
+  font-family: Lato;
+  src: url('~/assets/fonts/Lato.ttf');
+}
 .subtitle {
   font-family: Jost, sans-serif;
   font-size: 28px;
